--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "ng-lazyload-image": "^6.0.0",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "^0.8.19"
